# rag-regression-gate-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  KNOWN_ISSUES.md  README.md  pyproject.toml  requirements-api.txt  requirements-gate.txt
.cursor/: mcp.json
.github/workflows/: generate-candidate.yml  regression-gate.yml
app/: config.py  env.py  interfaces.py  schemas.py
app/adapters/: allganize.py  dart.py  generic.py  wiki.py
app/api/: main.py  schemas.py
app/core/: analyze.py  service.py  suggest.py
app/evaluator/: attribution.py  case_eval.py  judge.py
app/mcp/: analyze.py  server.py
app/rag/: chunker.py  index.py  pipeline.py  table_extract.py
data/: eval_cases.jsonl  eval_draft.jsonl
docs/: JOURNEY.md  artifact_contract.md  interfaces.md  portability.md  remediation_catalog.md
examples/: pr_comment.md
rag_regression_gate_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/: demo_summary.md  judge_validation.json  metrics_run_20260616_190521_1a13b95a9b06.json  scenarios.json
scripts/: build_allganize_corpus.py  build_allganize_eval.py  build_eval_set.py  build_wiki_excerpt.py  check_eval_set.py  demo_generic.py  demo_table.py  extract_tables.py  generate_candidate.py  measure_noise.py  patch_eval_draft.py  prefix_numeric_questions.py  regen_baseline_via_adapters.py  review_eval_set.py  run_allganize_baseline.py  run_allganize_gate_demo.py  run_attribution.py  run_eval.py  run_gate.py  run_scenario.py  run_wiki_baseline.py  run_wiki_gate_demo.py  verify_api_equivalence.py  verify_phaseA.py
tests/: test_api.py  test_attribution_contract.py  test_gate_behavior.py  test_generic_adapter.py  test_interface_equivalence.py  test_judge.py  test_noise_floor_domain.py  test_scorer.py  test_table_extract.py
(+49 files in other folders)
