[project]
name = "rag-regression-gate-mcp"
version = "0.1.0"
description = "MCP gate that detects and attributes RAG quality regressions by failure mode (domain-general; DART Korean-financial + English-wiki reference instances)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pdfplumber>=0.11",
    "openai>=1.40",
    "langchain-text-splitters>=0.3",
    "langchain-huggingface>=0.1",
    "langchain-chroma>=0.1",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# MCP server is OPTIONAL: the gate core (app/regression/*) stays pydantic-only.
# Install with `pip install ".[mcp]"`; fastmcp is imported only in app/mcp/server.py.
mcp = [
    "fastmcp>=2.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
